# conversion-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  README.md  baseline.md  eslint.config.js  pyproject.toml  render.yaml  requirements.txt  tsconfig.json
.agents/skills/tau2-bench-probes/: SKILL.md
.agents/skills/tenacious-code-quality/: SKILL.md
.agents/skills/tenacious-decision-memo/: SKILL.md
.agents/skills/tenacious-icp-classifier/: SKILL.md
.agents/skills/tenacious-playwright-enrichment/: SKILL.md
.agents/skills/tenacious-signal-brief/: SKILL.md
.agents/skills/tenacious-voice-rig/: SKILL.md
.claude/skills/tenacious-email-drafter/: SKILL.md
.claude/skills/tenacious-market-space-map/: SKILL.md
.claude/skills/tenacious-playwright-enrichment/: SKILL.md
agent/: __init__.py  config.py  llm.py  main.py  models.py  requirements.txt
agent/channels/: __init__.py  email_handler.py  handoff.py  sms_handler.py
agent/core/: __init__.py  conversation.py  email_drafter.py  icp_classifier.py  orchestrator.py  scap.py
agent/enrichment/: ai_maturity.py  competitor_gap.py  crunchbase.py  job_posts.py  layoffs.py  leadership.py  signal_brief.py
agent/enrichment/schemas/: competitor_gap_brief.example.json
agent/integrations/: __init__.py  calcom.py  hubspot.py  hubspot_mcp.py
agent/observability/: langfuse_client.py  trace_logger.py
data/: job_posts_snapshot.json  layoffs.csv
docs/: Draft Tenacious Sales Materials Template.md  Supporting Scenario of The Conversion Engine.md  TRP1 Challenge Week 10_ Conversion Engine for Sales Automation.md  runbook.md  sensitivity_analysis.md
eval/: ablation_results.json  harness.py  held_out_traces.jsonl  heldout_slice.json  method.md  run_heldout.py  scap_stats.py  score_log.json  trace_log.jsonl
eval/probes/: __init__.py  failure_taxonomy.md  probe_library.md  probe_results.json  probe_results_with_scap.json  probe_runner.py  target_failure_mode.md
outputs/: competitor_gap_brief_example.json  e2e_summary.json  e2e_traces.jsonl  full_thread_trace.json  full_thread_traces.jsonl  hiring_signal_brief.schema.json  hiring_signal_brief_example.json  hubspot_mcp_tools.json  latency_report.json  sample_prospect_full.json  tau2_summary.json
report/: backfill_memo.py  evidence_graph.json  memo.html  memo.md  render_memo.py  validate_evidence_graph.py
scripts/: build_report.py  compute_latency.py  extract_tau2_scores.py  fetch_data.py  list_hubspot_mcp_tools.py  run_batch_20.py  run_e2e_demo.py  run_full_thread_demo.py
tests/: conftest.py  helpers.py  test_ai_maturity.py  test_build_report.py  test_competitor_gap.py  test_enrichment.py  test_guardrails.py  test_icp_classifier.py  test_job_posts.py  test_orchestrator.py  test_sms_routing.py
tests/_job_posts_tmp/: baseline_requires_asof.json  exact_match.json  synthetic_allowed.json  synthetic_default.json
tests/_seed_loader_tmp/: style_guide.md
